# ai-extracted-data-cleaner

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: field_aliases.yaml  validation_rules.yaml
docs/: architecture.md
examples/: first_run_prompt_zh.md  run_demo.py
examples/expected_output/: README.md
examples/input/: raw_ai_extracted_samples.csv
outputs/demo/: cleaned_database.csv  correction_log.csv  data_quality_report.md  flagged_records.csv  paper_level_audit.csv
outputs/demo/state/: 01_schema_map.json  02_unit_normalized.json  03_physics_flags.json  04_duplicate_flags.json  05_review_queue_state.json
prompts/: 01_schema_agent.md  02_unit_agent.md  03_physics_agent.md  04_duplicate_agent.md  05_review_queue_agent.md  multi_agent_prompts.md
schemas/: agent_state.schema.json  cleaned_record.schema.json  flag_record.schema.json
scripts/: clean_ai_extracted_data.py
src/ai_extracted_data_cleaner/: __init__.py  cleaner.py  cli.py  duplicates.py  fields.py  report.py  units.py  utils.py  validators.py
src/ai_extracted_data_cleaner/config/: field_aliases.yaml  validation_rules.yaml
templates/: canonical_field_dictionary.csv  domain_rules.yaml  review_queue_template.csv
tests/: test_cleaner.py  test_fields.py  test_units.py
