[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-extracted-data-cleaner"
version = "1.0.0"
description = "A multi-agent skill for cleaning AI-extracted materials literature datasets."
requires-python = ">=3.9"
dependencies = ["pandas>=2.0.0", "openpyxl>=3.1.0", "pyyaml>=6.0.0"]

[project.scripts]
ai-extracted-data-cleaner = "ai_extracted_data_cleaner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
